@@ -1,3 +1,7 @@
+Sat Jun 18 00:20:54 2011  Tadayoshi Funaba  <tadf@dotrb.org>
+
+	* ext/date/date_core.c: do not define wnum[01].
+
 Fri Jun 17 18:57:36 2011  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* compile.c (iseq_compile_each): fix return value of obj[a,*b]=c.
